[package]
name = "ping-pong"
version = "0.1.0"
authors = ["Tobin C. Harding <tobin@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2.32"
futures = "0.3"
libp2p = { version = "0.19", default-features = false, features = ["tcp-async-std", "secio", "yamux", "mplex", "dns", "ping"] }
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros", "tcp"] }
